<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purpledk"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_left"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/includeUsersAdd_addChild"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <knowledge_seek.com.phyctogram.util.MyLinearView
        android:id="@+id/ll_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <knowledge_seek.com.phyctogram.util.MyScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/includeUsersAdd_name" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/includeUsersAdd_initials" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/includeUsersAdd_sign"
                    android:textColor="#ff0000"
                    android:textSize="10dp" />

                <EditText
                    android:id="@+id/et_initials"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters|textUri"
                    android:maxLength="3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/includeUsersAdd_birthday" />

                <DatePicker
                    android:id="@+id/dp_lifedate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:calendarViewShown="false"
                    android:spinnersShown="true"
                    android:theme="@android:style/Theme.Holo.Light" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/includeUsersAdd_sex" />

                <RadioGroup
                    android:id="@+id/rg_sexdstn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/rb_female"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/includeUsersAdd_girl" />

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/includeUsersAdd_boy" />

                </RadioGroup>

            </LinearLayout>
        </knowledge_seek.com.phyctogram.util.MyScrollView>

        <knowledge_seek.com.phyctogram.util.MyRelativeView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <knowledge_seek.com.phyctogram.util.MyButtonView
                android:id="@+id/btn_usersadd"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/btn_border_radius"
                android:text="@string/includeUsersAdd_add"
                android:textColor="#ffffff" />
        </knowledge_seek.com.phyctogram.util.MyRelativeView>
    </knowledge_seek.com.phyctogram.util.MyLinearView>

</LinearLayout>