<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:orientation="horizontal"
        android:padding="15dp">

        <com.pkmmte.view.CircularImageView
            android:id="@+id/img_profile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/sample" />

        <TextView
            android:id="@+id/tv_member_name"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:layout_toRightOf="@id/img_profile"
            android:singleLine="true"
            android:text="아이디 님"
            android:textColor="#ffffff"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text="@string/includeSetting_logout"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderbottom"
                android:gravity="fill_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/leftSlideMenu_home" />

            <ListView
                android:id="@+id/lv_usersList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="singleChoice"
                android:divider="#e0e0e0"
                android:dividerHeight="1dp"
                android:drawSelectorOnTop="true"/>

            <Button
                android:id="@+id/btn_usersDiary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderbottom"
                android:gravity="fill_vertical"
                android:paddingLeft="32dp"
                android:text="@string/leftSlideMenu_diary"
                android:textColor="@color/purple" />

            <Button
                android:id="@+id/btn_dataInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderbottom"
                android:gravity="fill_vertical"
                android:paddingLeft="32dp"
                android:text="@string/leftSlideMenu_selfWriteHeight"
                android:textColor="@color/purple" />

            <Button
                android:id="@+id/btn_usersManage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderbottom"
                android:gravity="fill_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/includeUsersMenage_manegeChild" />

            <Button
                android:id="@+id/btn_setup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderbottom"
                android:gravity="fill_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/includeSetting_setting" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>