<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purpledk"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_left"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_menu" />

        <TextView
            android:id="@+id/tv_users_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/diaryWriteActivity_registerChild"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <knowledge_seek.com.phyctogram.util.MyLinearView
        android:id="@+id/ll_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:orientation="vertical">

        <knowledge_seek.com.phyctogram.util.MyTextView
            android:id="@+id/tv_diary_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:editable="false"
            android:textSize="14dp" />

        <knowledge_seek.com.phyctogram.util.MyEditTextView
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/includeDiaryView_title"
            android:inputType="text"
            android:textSize="14dp" />

        <knowledge_seek.com.phyctogram.util.MyEditTextView
            android:id="@+id/et_contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="top|left"
            android:hint="@string/includeDiaryView_contents"
            android:inputType="textMultiLine"
            android:lines="21"
            android:maxWidth="5.0dip"
            android:minWidth="10.0dip"
            android:scrollHorizontally="false"
            android:textSize="14dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btn_pic"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:background="@drawable/btn_border_radius2"
                android:text="@string/includeDiaryWrite_gallery"
                android:textSize="12dp"
                android:textColor="@color/purple" />

            <Button
                android:id="@+id/btn_mov"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/btn_pic"
                android:text="@string/includeDiaryView_video"
                android:textSize="12dp"
                android:background="@drawable/btn_border_radius2"
                android:textColor="@color/purple" />

            <Button
                android:id="@+id/btn_diary_save"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_border_radius"
                android:text="@string/includeComWrite_save"
                android:textColor="#ffffff"
                android:textSize="12dp" />

        </RelativeLayout>
    </knowledge_seek.com.phyctogram.util.MyLinearView>
</LinearLayout>